# serializer version: 1
# name: test__explanation_snapshot
  Explanation:
  	CausalArgs: <class 'rex_xai.input.config.CausalArgs'>
  	Data: Data: RGB, ('N', 3, 224, 224), 224, 224, 3, first
  	 Target:FOUND_CLASS: 209, FOUND_CONF: 0.39424, TARGET_CLASS: n/a, TARGET_CONFIDENCE: n/a
  	prediction function: <function OnnxRunner.gen_prediction_function.<locals>.<lambda> >
  	ResponsibilityMaps: {209: 1}
  	run statistics: {'total_passing': 41, 'total_failing': 169, 'max_depth_reached': 4, 'avg_box_size': 2747.41667} (5 dp)
  	sufficiency mask: tensor([[[False, False, False,  ..., False, False, False],
           [False, False, False,  ..., False, False, False],
           [False, False, False,  ..., False, False, False],
           ...,
           [False, False, False,  ..., False, False, False],
           [False, False, False,  ..., False, False, False],
           [False, False, False,  ..., False, False, False]],
  
          [[False, False, False,  ..., False, False, False],
           [False, False, False,  ..., False, False, False],
           [False, False, False,  ..., False, False, False],
           ...,
           [False, False, False,  ..., False, False, False],
           [False, False, False,  ..., False, False, False],
           [False, False, False,  ..., False, False, False]],
  
          [[False, False, False,  ..., False, False, False],
           [False, False, False,  ..., False, False, False],
           [False, False, False,  ..., False, False, False],
           ...,
           [False, False, False,  ..., False, False, False],
           [False, False, False,  ..., False, False, False],
           [False, False, False,  ..., False, False, False]]])
  	explanation confidence: 0.1216
# ---
# name: test__explanation_snapshot.1
  976237796511694519
# ---
# name: test_extract_analyze[Strategy.Global]
  976237796511694519
# ---
# name: test_extract_analyze[Strategy.Global].1
  dict({
    'area': 0.1654,
    'deletion_curve': 0.0141,
    'entropy': 0.309,
    'insertion_curve': 0.6175,
    'robustness': 0.5,
  })
# ---
# name: test_extract_analyze[Strategy.Spatial]
  250330363344313757
# ---
# name: test_extract_analyze[Strategy.Spatial].1
  dict({
    'area': 0.3278,
    'deletion_curve': 0.0141,
    'entropy': 0.309,
    'insertion_curve': 0.6175,
    'robustness': 1.0,
  })
# ---
